discussion/kv_engine/173473/173473_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Add an item limit to range scan continue

Allow the continue to specify an item limit, which is checked
by the continue code. The continue will yield when hitting the
limit and require the client to re-issue a continue.

Change-Id: I4690d5fa2d7812bfe2e6a0a214a115163a212550

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-19 15:44:34.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-19 16:14:52.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45360/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\range_scan_test.cc(270): error C2664: "void RangeScanTest::testRangeScan(const std::unordered_set<StoredDocKey,std::hash<_Kty>,std::equal_to<_Kty>,std::allocator<_Kty>> &,CollectionID,cb::rangescan::KeyView,cb::rangescan::KeyView,size_t,size_t)": cannot convert argument 3 from "const char [5]" to "cb::rangescan::KeyView" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45360/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16741/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:272:19: error: no viable conversion from "const char [5]" to "cb::rangescan::KeyView" [clang-diagnostic-error]
                  "user",
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:26:7: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from "const char [5]" to "const cb::rangescan::KeyView &" for 1st argument
class KeyView {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:26:7: note: candidate constructor (the implicit move constructor) not viable: no known conversion from "const char [5]" to "cb::rangescan::KeyView &&" for 1st argument
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:38:5: note: candidate constructor not viable: no known conversion from "const char [5]" to "std::string_view" (aka "basic_string_view<char>") for 1st argument
    KeyView(std::string_view key) : key{key} {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:221:32: note: passing argument to parameter "start" here
        cb::rangescan::KeyView start,
                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:282:19: error: no viable conversion from "const char [5]" to "cb::rangescan::KeyView" [clang-diagnostic-error]
                  "user",
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:26:7: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from "const char [5]" to "const cb::rangescan::KeyView &" for 1st argument
class KeyView {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:26:7: note: candidate constructor (the implicit move constructor) not viable: no known conversion from "const char [5]" to "cb::rangescan::KeyView &&" for 1st argument
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan.h:38:5: note: candidate constructor not viable: no known conversion from "const char [5]" to "std::string_view" (aka "basic_string_view<char>") for 1st argument
    KeyView(std::string_view key) : key{key} {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:221:32: note: passing argument to parameter "start" here
        cb::rangescan::KeyView start,
                               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16741/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:272:19:
error: no viable conversion from "const char [5]" to "cb::rangescan::KeyView" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16741/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18519/ : FAILURE

Compile error at [2022-04-19T16:02:16.290Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:272:19:
error: cannot convert ?const char [5]? to ?cb::rangescan::KeyView?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18519/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26924/ : FAILURE

Compile error at [2022-04-19T16:13:27.544Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:272:19:
error: no viable conversion from "const char [5]" to "cb::rangescan::KeyView"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26924/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17615/ : FAILURE

Compile error at [2022-04-19T15:51:49.345Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:272:19:
error: no viable conversion from "const char [5]" to "cb::rangescan::KeyView"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17615/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6395/ : FAILURE

Compile error at [2022-04-19T15:57:22.468Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:272:19:
error: no viable conversion from "const char [5]" to "cb::rangescan::KeyView"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6395/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18856/ : FAILURE

Compile error at [2022-04-19T15:58:53.619Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:272:19:
error: cannot convert ?const char [5]? to ?cb::rangescan::KeyView?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18856/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6458/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19558/ : FAILURE

Compile error at [2022-04-19T16:05:39.897Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:272:19:
error: no viable conversion from "const char [5]" to "cb::rangescan::KeyView"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19558/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38102/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15674/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
